feat: adiciona funcionalidade para salvar e retornar comprovantes